[package]
name = "t4a-mcp"
version = "0.1.0"
edition = "2024"
description = "MCP server adapter for t4a (terminals for agents)"
license = "MIT"

[dependencies]
rmcp = { version = "1.2", features = ["server", "transport-io"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "io-util", "io-std", "time", "process"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
anyhow = "1"

[profile.release]
opt-level = "s"
lto = true
strip = true
